Fix text overlapping

--- a/styles/headerText.module.css
+++ b/styles/headerText.module.css
@@ -6,4 +6,6 @@
     4px 0px 5px #3564ad, 4px 0px 5px #3564ad, 4px 0px 5px #3564ad,
     -4px 0px 5px #3564ad, -4px 0px 5px #3564ad, -4px 0px 5px #3564ad,
     -4px 0px 5px #3564ad;
+  line-height: 1;
+  text-align: center;
 }
